[tool.poetry]
name = "nekton"
version = "0.1.0"
description = "A python package for DICOM to NifTi and NifTi to DICOM-SEG and GSPS conversion"
authors = ["a-parida12 <abhijeet@deepc.ai>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^3.2.0"
nibabel = "^3.2.1"
numpy = "^1.22.0"
pydicom = "^2.2.2"
pydicom-seg = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "nekton/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"